test/positive/feature_publicfields.java

public class feature_publicfields {
  public feature_publicfields() {}
  public int x;
}

