test/negative/InterfaceWithIdenticalSignatures.java
public interface InterfaceWithIdenticalSignatures {
    public int x(int a, int b); // TODO: is public required here?
    public void x(int x, int y); // TODO: is public required here?
}
